<resources>
    <string name="app_name">Bilgilik</string>
    <string name="ad">Ad</string>
    <string name="soyad">Soyad</string>
    <string name="dogumyeri">Dogum Yeri</string>
    <string name="dogumtarihi">Dogum Tarihi</string>
    <string name="dogumtarihi2">Dogum Tarihinizi Seçiniz</string>
    <string name="kimlikno">Kimlik No</string>
    <string name="telefonno">Telefon No</string>
    <string name="kaydet">Kaydet</string>
    <string name="resim">Resim</string>
    <string name="clear">Temizle</string>
    <string name="ara">Ara</string>
    <string name="yas">Yaşı</string>
    <string name="dersler">Dersler</string>
    <string name="dersismi">Ders ismi</string>
    <string name="dersnotu">Ders notu</string>
    <string name="kullanıcıAdi">Kullanıcı Adı</string>
    <string name="sifre">Şifre</string>
    <string name="email">Email</string>
    <string name="dersadi">Dersin Adı</string>
    <string name="not">Alınan Not</string>
    <string name="ogretmen">Dersin Öğretmeni</string>
    <string name="kredi">Dersin Kredisi</string>

</resources>
