<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sayfa2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textName_p2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ad"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textSurname_p2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soyad"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textID_p2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textDate_p2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dogumtarihi"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textYear_p2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yas"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textPlace_p2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dogumyeri"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textPhone_p2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/telefonno"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonCall_p2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ara" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>