<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arkaplan"
    tools:context=".InformationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imagePhoto_p2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/man"
                tools:srcCompat="@drawable/man" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewName_p2"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/ad"
                android:textColor="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textName_p2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ad"
                android:textColor="@color/colorAccent"
                android:textColorLink="@color/colorPrimary"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSurname_p2"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/soyad"
                android:textColor="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textSurname_p2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/soyad"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewID_p2"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/kimlikno"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textID_p2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kimlikno"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDate_p2"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/dogumtarihi"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDate_p2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dogumtarihi"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAge_p2"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/yas"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textYear_p2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yas"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPlace_p2"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/dogumyeri"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textPlace_p2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dogumyeri"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPhone_p2"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:text="@string/telefonno"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textPhone_p2"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:text="@string/telefonno"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/buttonCall_p2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:background="@drawable/phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewEmail_p2"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:text="@string/email"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textEmail_p2"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:text="@string/email"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/buttonSend_p2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:background="@drawable/email" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/dersler"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonCourses"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_weight="0"
                android:background="@drawable/book" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>